# rasm

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
data/: add.wasm  add.wat  arithmetic.wasm  arithmetic.wat  br.wasm  br_if.wasm  br_if.wat  br_table.wasm  br_table.wat  calc.wasm  cmp.wasm  fac.wasm  fac.wat  fib.wasm  hw.wasm  hw_rust.wasm  label_names.wasm  mem.wasm  mem.wat  num.wasm  num.wat  param.wasm  param.wat  return.wasm  return.wat  sum.wasm
src/: main.rs
src/dumper/: dumper.rs  mod.rs
src/interpreter/: interpreter.rs  mod.rs
src/module/: instruction.rs  mod.rs  module.rs  opcodes.rs
