[package]
name = "rasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.2.3"
strum = "0.24"
strum_macros = "0.24"
cargo-edit = "0.10.4"
clap = { version = "3.2.16", features = ["derive"] }
